# mcpone-cli

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  config.toml.example  pyproject.toml
docs/: architecture.md  bug-report-antigravity-sync.md  bug-report-github-remote-auth-sync.md  command-reference.md  config-sync-spec.md  database-reference.md  developer-guide.md  feature-support-matrix.md  market-install-spec.md  release-workflow.md  testing-guide.md  user-guide.md  write-safety.md
src/mcpone_cli/: cli.py  config.py  formats.py  market.py  models.py  store.py
tests/: conftest.py  test_e2e.py
